fixed show text overflow

--- a/css/zoostyle.css
+++ b/css/zoostyle.css
@@ -301,6 +301,9 @@ span.review-categories > span.zk-hidden {
 .home-show {
     font-weight: 600;
     font-size: 12pt;
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 .home-trackbox {
     position: relative;
